Arreglo del texto

--- a/Pagina/index.html
+++ b/Pagina/index.html
@@ -20,8 +20,8 @@
                         </ul>
                     </li>
                     <li><a href="Integrantes.html">Integrantes</a></li>
-                    <li><a href="#">Instrumentos</a></li>                    
-                    <li><a href="Instrumentos.html">Suscripción</a>
+                    <li><a href="Instrumentos.html">Instrumentos</a></li>                    
+                    <li><a href="subscripcion.html">Suscripción</a>
                     
                     
                 </ul>
